--- a/index-accountant.html
+++ b/index-accountant.html
@@ -24,7 +24,7 @@
     <!-- FONTS -->
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic'>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,300,400'>
 
     <!-- CSS -->
