--- a/content/adagency/category-branding.html
+++ b/content/adagency/category-branding.html
@@ -21,9 +21,9 @@
 		<link rel="shortcut icon" href="images/favicon.ico">
 
 		<!-- FONTS -->
-		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-		<link rel='stylesheet' id='Oswald-css' href='http://fonts.googleapis.com/css?family=Oswald:100,300,400,400italic,500,700'>
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+		<link rel='stylesheet' id='Oswald-css' href='https://fonts.googleapis.com/css?family=Oswald:100,300,400,400italic,500,700'>
 		
 		<!-- CSS -->
 		<link rel='stylesheet' href='../../css/global.css'>
@@ -377,7 +377,7 @@
 
 							<!-- Copyrights -->
 							<div class="copyright">
-								&copy; 2017 BeAdAgency - BeTheme. All Rights Reserved. <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+								&copy; 2017 BeAdAgency - BeTheme. All Rights Reserved. <a target="_blank" rel="nofollow" href="#">BeantownThemes</a>
 							</div>
 
 							<!--Social info area-->
