--- a/index-agency.html
+++ b/index-agency.html
@@ -22,9 +22,9 @@
     <link rel="shortcut icon" href="content/agency/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,100italic,300,400,400italic,500,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,100italic,300,400,400italic,500,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -673,7 +673,7 @@
                     <div class="column one">
                         <a id="back_to_top" href="#" class="button button_left button_js"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeAgency - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeAgency - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="#">BeantownThemes</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social">
@@ -732,7 +732,7 @@
     <script src="plugins/rs-plugin/js/extensions/revolution.extension.migration.min.js"></script>
     <script src="plugins/rs-plugin/js/extensions/revolution.extension.parallax.min.js"></script>
 
-    <script src="http://maps.google.com/maps/api/js?sensor=false&ver=5.9"></script>
+    <script src="https://maps.google.com/maps/api/js?sensor=false&ver=5.9"></script>
 
     <script>
         function google_maps_54af9a6782fc0() {
