--- a/index-accountant.html
+++ b/index-accountant.html
@@ -35,7 +35,7 @@
 
     <!-- Revolution Slider -->
     <link rel="stylesheet" href="plugins/rs-plugin/css/settings.css">
-	
+
 </head>
 
 
@@ -87,7 +87,7 @@
                                                 <a href="content/accountant/contact.html"><span>Contact</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0; color: #82d88a;">Buy now</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0; color: #82d88a;">Buy now</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -405,7 +405,7 @@
                     <div class="column one">
 
                         <div class="copyright">
-                            &copy; 2017 BeAccountant - BeTheme. All Rights Reserved. <a href="http://bit.ly/1M6lijQ?ref=BeantownThemes" target="_blank">BeantownThemes</a>
+                            &copy; 2017 BeAccountant - BeTheme. All Rights Reserved. <a href="mailto:rokun.cse@gmail.com?ref=BeantownThemes" target="_blank">BeantownThemes</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
