--- a/index-active.html
+++ b/index-active.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/active/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,700italic'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Playfair+Display:100,300,400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Playfair+Display:100,300,400,400italic,700,700italic'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -99,7 +99,7 @@
                                                 <a href="#pricing"><span>Pricing table</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0; color: #c58da0;">Buy now</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0; color: #c58da0;">Buy now</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu-fine"></i></a>
@@ -114,7 +114,7 @@
                                                 <a href="#pricing">Pricing table</a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span style="padding: 0; color: #c58da0;">Buy now</span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span style="padding: 0; color: #c58da0;">Buy now</span></a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -612,7 +612,7 @@
                 <div class="container">
                     <div class="column one">
                         <div class="copyright">
-                            &copy; 2017 BeActive - <a href="http://bit.ly/1M6lijQ">BeTheme.</a>
+                            &copy; 2017 BeActive - <a href="mailto:rokun.cse@gmail.com">BeTheme.</a>
                         </div>
                         <ul class="social"></ul>
                     </div>
