--- a/index-adagency.html
+++ b/index-adagency.html
@@ -578,7 +578,7 @@
 
                         <!-- Copyrights -->
                         <div class="copyright">
-                            &copy; 2017 BeAdAgency - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeAdAgency - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
 
                         <!--Social info area-->
