--- a/index-betheme.html
+++ b/index-betheme.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/betheme/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lora:100,300,400,400italic,500,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lora:100,300,400,400italic,500,700,700italic'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -128,7 +128,7 @@
                                     <a id="search_button" href="#">
                                     	<i class="icon-search-fine"></i>
                                     </a>
-                                    <a href="http://bit.ly/1M6lijQ" class="button button_theme button_js action_button" target="_blank">
+                                    <a href="mailto:rokun.cse@gmail.com" class="button button_theme button_js action_button" target="_blank">
                                     	<span class="button_label">Buy now</span>
                                     </a>
                                 </div>
@@ -718,7 +718,7 @@
                                     <div class="mcb-wrap-inner">
                                         <div class="column mcb-column one column_button">
                                             <div class="button_align align_right">
-                                                <a class="button  button_size_3 button_theme button_js" href="http://bit.ly/1M6lijQ" target="_blank"><span class="button_label">Buy BeTheme now</span></a>
+                                                <a class="button  button_size_3 button_theme button_js" href="mailto:rokun.cse@gmail.com" target="_blank"><span class="button_label">Buy BeTheme now</span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -812,7 +812,7 @@
                                         </div>
                                         <div class="column mcb-column one column_column">
                                             <div class="column_attr clearfix align_center">
-                                                <a class="button  button_left button_size_2 button_js" href="http://bit.ly/1M6lijQ" target="_blank">
+                                                <a class="button  button_left button_size_2 button_js" href="mailto:rokun.cse@gmail.com" target="_blank">
                                                 	<span class="button_icon"><i class="icon-layout" ></i></span>
                                                 	<span class="button_label">Buy BeTheme Now</span>
                                                 </a>
@@ -834,7 +834,7 @@
             <div class="footer_action">
                 <div class="container">
                     <div class="column one column_column">
-                        <a href="http://bit.ly/1M6lijQ" style="text-decoration: none; color: #CCC" target="_blank"><span style="font-size: 18px">If you are interested in <span class="themecolor">Be|</span><span style="color: #FFF">theme</span>, do not wait and <span style="color: #FFF">BUY IT NOW!</span></span></a>
+                        <a href="mailto:rokun.cse@gmail.com" style="text-decoration: none; color: #CCC" target="_blank"><span style="font-size: 18px">If you are interested in <span class="themecolor">Be|</span><span style="color: #FFF">theme</span>, do not wait and <span style="color: #FFF">BUY IT NOW!</span></span></a>
                     </div>
                 </div>
             </div>
@@ -908,7 +908,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_js" href="#"><i class="icon-up-open-big"></i></a>
                         <div class="copyright">
-                            &copy; 2017 BeTheme - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeTheme - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <ul class="social">
                             <li class="skype">
@@ -945,7 +945,7 @@
             <a href="#" class="close"><i class="icon-cancel-fine"></i></a>
         </div>
         <div class="extras">
-            <a href="http://bit.ly/1M6lijQ" class="button button_theme button_js action_button " target="_blank"><span class="button_label">Buy now</span></a>
+            <a href="mailto:rokun.cse@gmail.com" class="button button_theme button_js action_button " target="_blank"><span class="button_label">Buy now</span></a>
             <div class="extras-wrapper">
                 <a class="icon search" href="#"><i class="icon-search-fine"></i></a>
             </div>
