--- a/index-builder.html
+++ b/index-builder.html
@@ -22,9 +22,9 @@
     <link rel="shortcut icon" href="content/builder/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,300,400,400italic,500,700,900'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300,400,400italic,500,700,900'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -63,7 +63,7 @@
                                 <a href="content/builder/contact-us.html">Contact us</a>
                             </li>
                             <li>
-                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span style="padding: 0px; color:#22467E;">Buy now</span></a>
+                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span style="padding: 0px; color:#22467E;">Buy now</span></a>
                             </li>
                         </ul>
                     </nav>
@@ -640,7 +640,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_left button_js " href="#"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeBuilder - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeBuilder - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
