--- a/gallery.html
+++ b/gallery.html
@@ -22,8 +22,8 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -653,7 +653,7 @@
                                                 </ul>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><em class="themecolor">Buy</em></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><em class="themecolor">Buy</em></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -683,7 +683,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item-1583">
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ">Buy it now !</a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com">Buy it now !</a>
                                             </li>
                                         </ul>
                                     </nav>
@@ -893,7 +893,7 @@
                 <div class="container">
                     <!-- One full width row-->
                     <div class="column one column_column">
-                        <a href="http://bit.ly/1M6lijQ" class="flv_footer_grey" target="_blank"><span class="flv_font_18">If you are interested in <span class="themecolor">Be|</span><span class="flv_color_white">theme</span>, do not wait and <span class="flv_color_white">BUY IT NOW!</span></span></a>
+                        <a href="mailto:rokun.cse@gmail.com" class="flv_footer_grey" target="_blank"><span class="flv_font_18">If you are interested in <span class="themecolor">Be|</span><span class="flv_color_white">theme</span>, do not wait and <span class="flv_color_white">BUY IT NOW!</span></span></a>
                     </div>
                 </div>
             </div>
@@ -992,7 +992,7 @@
                     <div class="column one">
                         <a id="back_to_top" href="#" class="button button_left button_js"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeTheme - Muffin group - HTML by <a href="http://bit.ly/1M6lijQ" target="_blank">BeantownThemes</a>
+                            &copy; 2017 BeTheme - Muffin group - HTML by <a href="mailto:rokun.cse@gmail.com" target="_blank">BeantownThemes</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social">
