--- a/index-agency2.html
+++ b/index-agency2.html
@@ -22,11 +22,11 @@
     <link rel="shortcut icon" href="content/agency2/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Poppins:400,400italic,700,700italic'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,300,400'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300,400'>
     
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -70,9 +70,7 @@
                                             <li>
                                                 <a href="#contact"><span>Contact</span></a>
                                             </li>
-                                            <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0; color: #2f43a9; font-style: italic; font-weight: 700;">Buy now</span></span></a>
-                                            </li>
+                                          
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
                                 </div>
@@ -713,7 +711,7 @@
                 <div class="container">
                     <div class="column one">
                         <div class="copyright">
-                            &copy; 2017 BeAgency 2 - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeAgency 2 - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <ul class="social"></ul>
                     </div>
