--- a/index-agro.html
+++ b/index-agro.html
@@ -22,11 +22,11 @@
     <link rel="shortcut icon" href="content/agro/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,100italic,300,400,400italic,500,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Droid+Serif:100,300,400,400italic,500,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Exo:100,300,400,400italic,500,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,100italic,300,400,400italic,500,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Droid+Serif:100,300,400,400italic,500,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Exo:100,300,400,400italic,500,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -113,7 +113,7 @@
                                                 <a href="content/agro/contact-and-support.html"><span>Contact and support</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0px; color:#fff;">Buy now</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0px; color:#fff;">Buy now</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -708,7 +708,7 @@
 
                         <!-- Copyrights -->
                         <div class="copyright">
-                            &copy; 2017 BeAgro - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeAgro - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
 
                         <!--Social info area-->
