--- a/index-animals.html
+++ b/index-animals.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/animals/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Raleway:100,300,400,400italic,500,700,800,900'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Alegreya:100,300,400,400italic,500,700,800,900'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:100,300,400,400italic,500,700,800,900'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Alegreya:100,300,400,400italic,500,700,800,900'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -459,7 +459,7 @@
                     <div class="column one">
                         <a id="back_to_top" href="#" class="button button_left button_js"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeAnimals - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeAnimals - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <nav id="social-menu">
                             <ul id="menu-main-menu-1" class="social-menu">
