--- a/index-app2.html
+++ b/index-app2.html
@@ -22,9 +22,9 @@
     <link rel="shortcut icon" href="content/app2/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic,700,700italic'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -74,7 +74,7 @@
                                         <a href="#download"><span>Download</span></a>
                                     </li>
                                     <li>
-                                        <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0; color: #cb7692;">Buy now</span></span></a>
+                                        <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0; color: #cb7692;">Buy now</span></span></a>
                                     </li>
                                 </ul>
                             </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -362,7 +362,7 @@
                                             <div class="column_attr">
                                                 <h2 style="color: #fff;">Join our society and subscribe for new apps and updates</h2>
                                                 <hr class="no_line" style="margin: 0 auto 35px;" />
-                                                <a class="button  button_stroke_custom button_js" href="http://bit.ly/1M6lijQ" target="_blank" style=" border-color:#cb7692 !important; color:#eee8eb;"><span class="button_label">Buy BeTheme now</span></a> </div>
+                                                <a class="button  button_stroke_custom button_js" href="mailto:rokun.cse@gmail.com" target="_blank" style=" border-color:#cb7692 !important; color:#eee8eb;"><span class="button_label">Buy BeTheme now</span></a> </div>
                                         </div>
                                     </div>
                                 </div>
@@ -569,7 +569,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_left button_js" href="#"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeApp 2 - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeApp 2 - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <ul class="social"></ul>
                     </div>
