--- a/index-asg.html
+++ b/index-asg.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/asg/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Raleway:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Orbitron:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Orbitron:100,300,400,400italic,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -75,7 +75,7 @@
                                                 <a href="content/asg/contact.html"><span>CONTACT</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0px; color:#382B21;">BUY NOW</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0px; color:#382B21;">BUY NOW</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -344,7 +344,7 @@
                                         <a href="content/asg/contact.html">CONTACT</a>
                                     </li>
                                     <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-63">
-                                        <a target="_blank" href="http://bit.ly/1M6lijQ"><span style="padding: 0px; color:#382B21;">BUY NOW</span></a>
+                                        <a target="_blank" href="mailto:rokun.cse@gmail.com"><span style="padding: 0px; color:#382B21;">BUY NOW</span></a>
                                     </li>
                                 </ul>
                             </div>
@@ -357,7 +357,7 @@
                 <div class="container">
                     <div class="column one">
                         <div class="copyright">
-                            &copy; 2017 BeASG - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeASG - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
