--- a/index-barber2.html
+++ b/index-barber2.html
@@ -22,11 +22,11 @@
     <link rel="shortcut icon" href="content/barber2/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,700italic'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Noto+Serif:100,300,400,400italic,700,700italic'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Noto+Serif:400'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Noto+Serif:100,300,400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Noto+Serif:400'>
     
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -73,7 +73,7 @@
                                                 <a href="content/barber2/contact-us.html"><span>Contact us</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0; color: #fbdaaf;">Buy now</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0; color: #fbdaaf;">Buy now</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -363,7 +363,7 @@
                     <div class="container">
                         <div class="column one">
                             <div class="copyright">
-                                &copy; 2017 BeBarber2 - BeTheme Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                                &copy; 2017 BeBarber2 - BeTheme Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                             </div>
                             <ul class="social"></ul>
                         </div>
