--- a/index-billiard.html
+++ b/index-billiard.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/billiard/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:400,400italic,600,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Titillium+Web:400,400italic,600,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,400italic,600,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Titillium+Web:400,400italic,600,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -76,7 +76,7 @@
                                                 <a href="content/billiard/contact.html"><span><i class="icon-record"></i> CONTACT</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="color: #FFD1A4; padding: 0;"><i class="icon-record"></i> BUY NOW</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="color: #FFD1A4; padding: 0;"><i class="icon-record"></i> BUY NOW</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -384,7 +384,7 @@
                 <div class="container">
                     <div class="column one">
                         <div class="copyright">
-                            &copy; 2017 BeBilliard - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeBilliard - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
