--- a/index-bistro.html
+++ b/index-bistro.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/bistro/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic,800'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:100,300,400'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic,800'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:100,300,400'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -72,7 +72,7 @@
                                                 <a href="content/bistro/contact.html"><span>Contact</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0; color: #ead690;">Buy now</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0; color: #ead690;">Buy now</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
