--- a/index-blogger2.html
+++ b/index-blogger2.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/blogger2/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,400italic,700,700italic'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Raleway:300,400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,400italic,700,700italic'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:300,400,400italic,700,700italic'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -73,7 +73,7 @@
                                                 <a href="content/blogger2/about-us.html"><span>About us</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0; color: #d30000;">Buy now</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0; color: #d30000;">Buy now</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -551,7 +551,7 @@
                     <div class="column one">
 
                         <div class="copyright">
-                            &copy; 2017 BeBlogger 2 - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeBlogger 2 - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
