--- a/index-cafe.html
+++ b/index-cafe.html
@@ -22,10 +22,10 @@
     <link rel="shortcut icon" href="content/cafe/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Parisienne:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Libre+Baskerville:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Parisienne:100,300,400,400italic,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -75,7 +75,7 @@
                                                 <a href="content/cafe/our-local.html"><span>Our local</span></a>
                                             </li>
                                             <li>
-                                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span><span style="padding: 0px; color:#ab8e4e;">Buy now</span></span></a>
+                                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span><span style="padding: 0px; color:#ab8e4e;">Buy now</span></span></a>
                                             </li>
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
@@ -528,7 +528,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_left button_js hide" href="#"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeCafe - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeCafe - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
