--- a/index-callcenter.html
+++ b/index-callcenter.html
@@ -22,11 +22,11 @@
     <link rel="shortcut icon" href="content/callcenter/images/favicon.ico">
 
     <!-- FONTS -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
 
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat:300,400,400italic,700'>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lora:300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat:300,400,400italic,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lora:300,400,400italic,700'>
 
     <!-- CSS -->
     <link rel='stylesheet' href='css/global.css'>
@@ -76,7 +76,7 @@
                                 <a href="content/callcenter/contact-us.html">CONTACT US</a>
                             </li>
                             <li>
-                                <a target="_blank" href="http://bit.ly/1M6lijQ"><span style="padding: 0px; color:#985A00;">BUY NOW</span></a>
+                                <a target="_blank" href="mailto:rokun.cse@gmail.com"><span style="padding: 0px; color:#985A00;">BUY NOW</span></a>
                             </li>
                         </ul>
                     </nav>
@@ -609,7 +609,7 @@
                     <div class="column one">
                         <a id="back_to_top" class="button button_left button_js " href="#"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeCallCenter - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="http://bit.ly/1M6lijQ">BeantownThemes</a>
+                            &copy; 2017 BeCallCenter - BeTheme. Muffin group - HTML by <a target="_blank" rel="nofollow" href="mailto:rokun.cse@gmail.com">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
