--- a/features-color-skins.html
+++ b/features-color-skins.html
@@ -946,7 +946,7 @@
                     <div class="column one">
                         <a id="back_to_top" href="#" class="button button_left button_js"><span class="button_icon"><i class="icon-up-open-big"></i></span></a>
                         <div class="copyright">
-                            &copy; 2017 BeTheme - BeantownThemes - HTML by <a href="mailto:rokun.cse@gmail.com" target="_blank">BeantownThemes</a>
+                            &copy; 2017 BeTheme - BeantownThemes - HTML by <a href="mailto:rokun.cse@gmail.com" target="_blank">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social">
