--- a/index-accountant.html
+++ b/index-accountant.html
@@ -405,7 +405,7 @@
                     <div class="column one">
 
                         <div class="copyright">
-                            &copy; 2017 BeAccountant - BeTheme. All Rights Reserved. <a href="mailto:rokun.cse@gmail.com?ref=BeantownThemes" target="_blank">BeantownThemes</a>
+                            &copy; 2017 BeAccountant - BeTheme. All Rights Reserved. <a href="mailto:rokun.cse@gmail.com" target="_blank">Rokun Uzzaman</a>
                         </div>
                         <!--Social info area-->
                         <ul class="social"></ul>
