--- a/img.html
+++ b/img.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <img src="images/Home Page.jpg" alt="" style="width:100%;height:100%" />
+    <img src="images/homepage.jpg" alt="" style="width:100%;height:100%" />
   </body>
 </html>
