--- a/img.html
+++ b/img.html
@@ -1,4 +1,13 @@
 <html>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+  </head>
+  <style>
+    body{
+      font-family: 'Muli', sans-serif;
+      font-size: 14px;
+    }
+  </style>
   <body style="padding:0;margin:0">
     <img src="images/homepage.jpg" alt="" style="width:100%;height:auto" />
   </body>
