--- a/index-band.html
+++ b/index-band.html
@@ -36,7 +36,7 @@
 
 <body class="color-one one-page layout-full-width header-simple header-empty minimalist-header sticky-header sticky-white hide-title-area subheader-title-left">
     <!-- Main Theme Wrapper -->
-    <div id="Wrapper">
+<div id="Wrapper">
         <!-- Header Wrapper -->
         <div id="Header_wrapper">
             <!-- Header -->
@@ -247,7 +247,7 @@
                                         <!-- Animated area -->
                                         <div class="animate" data-anim-type="bounceIn">
                                             <div class="image_frame no_link scale-with-grid aligncenter no_border">
-                                                <div class="image_wrapper"><img class="scale-with-grid" src="content/band/images/home_band_cd.png" alt="">
+                                                <div class="image_wrapper"><img class="scale-with-grid" src="content/band/images/rose-1750279_960_720.jpg" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -289,7 +289,7 @@
                                         <!-- Animated area -->
                                         <div class="animate" data-anim-type="bounceIn">
                                             <div class="image_frame no_link scale-with-grid aligncenter no_border">
-                                                <div class="image_wrapper"><img class="scale-with-grid" src="content/band/images/home_band_tickets.png" alt="">
+                                                <div class="image_wrapper"><img class="scale-with-grid" src="content/band/images/home_band_tickets.jpg" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -312,8 +312,10 @@
                                     </div>
                                 </div>
                             </div>
+                            
+                            
                         </div>
-
+<p style="color: #f5f5f5;background:  #000;margin:  0;padding: 15px 0;text-align: center;">Copyright &copy; 2018 Band. All right reserbed. Design and develop by <a href="mailto:rokun.cse@gmail.com">Rokun </a></p>
                     </div>
                 </div>
             </div>
