--- a/index-band.html
+++ b/index-band.html
@@ -11,15 +11,15 @@
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Be</title>
+    <title>Band Html Template</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- Favicons -->
-    <link rel="shortcut icon" href="content/band/images/favicon.ico">
+    <!-- Favicons 
+    <link rel="shortcut icon" href="content/band/images/favicon.ico">-->
 
     <!-- FONTS -->
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
